remove schemed structs and use two Option's instead of Result everywhere
